--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,11 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
-    "a2a-sdk[grpc]>=0.3.8",
+    "a2a-sdk>=0.3.8",
+    "click>=8.3.0",
+    "dotenv>=0.9.9",
+    "httpx>=0.28.1",
+    "uvicorn>=0.37.0",
 ]
 
 [project.urls]
@@ -117,4 +121,3 @@ skip_empty = true
 [tool.coverage.run]
 branch = true
 source = ["src"]
-
