--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "click>=8.3.0",
     "dotenv>=0.9.9",
     "httpx>=0.28.1",
+    "starlette>=0.48.0",
     "uvicorn>=0.37.0",
 ]
 
