Only build docker image on once

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,6 +15,9 @@ on:
       - 'pyproject.toml'
       - 'uv.lock'
       - '.github/workflows/docker-publish.yml'
+  release:
+    types: [published]
+
 
 env:
   REGISTRY: ghcr.io
@@ -49,4 +52,4 @@ jobs:
             type=ref,event=branch
             type=raw,value=latest,enable={{is_default_branch}}
             type=ref,event=pr
-            type=sha
+            type=sha,value={{short_sha}}
