Include lables in the annotation index for better visibility in registries

--- a/.github/actions/build-and-publish-docker/action.yml
+++ b/.github/actions/build-and-publish-docker/action.yml
@@ -52,6 +52,9 @@ runs:
       with:
         images: ${{ inputs.registry }}/${{ inputs.image-name }}
         tags: ${{ inputs.tags-config }}
+      env:
+        DOCKER_METADATA_ANNOTATIONS_LEVELS: manifest,index
+
 
     - name: Build and push Docker image
       id: build
