Where to get CLIENT_ID and CLIENT_SECRET

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ API_BASE_URL=https://law-api-poc.stage.lexmachina.com
 # API_TOKEN=your_api_token_here
 
 # Authentication Method 2: OAuth2 Client Credentials
+# Setup application at https://law.lexmachina.com/api-settings to get CLIENT_ID and CLIENT_SECRET
 # Uncomment and set both if using OAuth2
 # CLIENT_ID=your_client_id
 # CLIENT_SECRET=your_client_secret
